# pokemon-or-linux

./: .gitignore  README.md  pyproject.toml
game_app/: admin.py  api.py  models.py  schemas.py  services.py  urls.py  views.py
game_app/migrations/: 0001_initial.py
game_app/static/js/: scripts_game.js  scripts_jogadores.js
game_app/templates/: base.html
game_app/templates/game_app/: game.html  top_jogadores.html
game_app/templates/game_app/partial/: resposta.html
game_project/: settings.py  urls.py
